# KSaper

./: CMakeLists.txt  LICENSE  README.md
src/: Definitions.hpp  Images.qrc  KSaperApplication.cpp
src/controller/: Controller.cpp  Controller.hpp
src/gui/: Actions.cpp  Actions.hpp  BoardWidget.cpp  BoardWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/model/: Board.cpp  Board.hpp  IModel.hpp  Model.cpp  Model.hpp  NullModel.cpp  NullModel.hpp
src/renderer/: IRenderer.hpp  NullRenderer.cpp  NullRenderer.hpp  Renderer.cpp  Renderer.hpp
